expected/main/core/structs/structs18.err
ERROR: "actual/main/core/structs/structs18.lc", line 2
struct Bad6/12 [ x :: Stored Word ] -- invalid: size is incorrect
^
Size of x is 8 less than expected

ERROR: Aborting after previously reported error

